Added projects home page and updated links to projects page

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -103,6 +103,14 @@ margin-right: auto;
 		
 		text-align: center;
 	}
+	
+	.header-text3 {
+		font-size:22px;
+		margin-top:0px;
+		margin-bottom:0px;
+		
+		text-align: center;
+	}
 
 }
 
@@ -123,6 +131,13 @@ margin-right: auto;
 		margin-bottom:40px;
 		text-align: right;
 		padding-right:0px;
+	}
+	
+	.header-text3 {
+		font-size:25px;
+		margin-top:0px;
+		margin-bottom:5px;
+		text-align: center;
 	}
 
     .title-text1 {
